--- a/docs/readme.zd
+++ b/docs/readme.zd
@@ -3,15 +3,17 @@
 
 :avatar "https://uploads-ssl.webflow.com/5ac60362cb2f7c52cdc7b543/5d78fafcecca5c1282e49b5b_minilogo-red.png"
 
-:title "FHIR RU"
-
 :telegram "https://t.me/fhir_ru"
 
+:title "FHIR RU"
+
+^title "Введение"
 :summary /
 
 Группа экспертов и компаний, действующих в области информатизации здравоохранения, при поддержке
 #orgs.hl7-russia и #orgs.cniioiz инициируют создание рабочей группы HL7 FHIR Russia.
 
+^title "Рабочие группы"
 :working-groups /
 
 Работа проводится в рабочих группах.
@@ -31,9 +33,8 @@
 
 Рабочие группы проводят регулярные #meetings
 
+^title "Международный опыт"
 :refs /
-
-Международный опыт
 
 В соответствии со стандартом FHIR Ru Core представляет собой национальное руководство
 по реализации стандарта FHIR (implementation guide, IG или Руководство) на территории Российской Федерации.
@@ -48,56 +49,54 @@
 * [Узбекистан](https://ig.kodality.dev/uz-base/index.html)
 * [Эстония](https://simplifier.net/guide/ee-fhir-base/home)
 
+^title "Что входит в FHIR Ru Core?"
 :scope /
 
-Что входит в FHIR Ru Core?
 FHIR Ru Core включает, но не ограничивается следующими разделами:
 
+^title "FHIR-артефакты"
 :scope:artifacts /
 
-FHIR-артефакты
 На странице #artifacts приведены списки всех профилей на ресурсы, типы данных, расширения, наборы значений, системы кодирования и идентификаторы, определенные в рамках данного руководства по внедрению.
 
+^title "Модель данных"
 :scope:data-model /
 
-Модель данных
+* профили FHIR ресурсов #artifacts.profiles
+* профили типов данных #artifacts.datatypes
+* расширения FHIR ресурсов #artifacts.extensions
+* терминология: справочники #artifacts.valuesets, системы кодирования #artifacts.codesystems, системы идентификации #artifacts.identifiers
 
-* [профили FHIR ресурсов](artifacts.profiles),
-* [профили типов данных](artifacts.datatypes),
-* [расширения FHIR ресурсов](artifacts.extensions),
-* терминология ([справочники](artifacts.valuesets), [системы кодирования](artifacts.codesystems), [системы идентификации](artifacts.identifiers)).
+^title "Термины"
+:scope:terms
 
-:scope:support "support."
-
-^table-of [:xt/id]
-:scope:terms datalog/
+^table [:xt/id]
+:scope:terms-table datalog/
 {:find [(pull ?e [:xt/id])] :where [[?e :parent terms]] :in [terms]}
 
+^title "История изменений"
 :scope:timeline /
 
-[История изменений](timeline) Руководства.
+[История изменений](timeline) Руководства в формате git.
 
+^title "Интеграционное взаимодействие"
 :scope:api /
-
-Интеграционное взаимодействие
 
 * требования к API
 * требования к методам поиска
 * требования к структурированным электронным документам
 * требования к совместимости с Национальной платформой "Здоровье" (композиция ЕГИСЗ, ФГИС ОМС, АИС Рoсздравнадзора и других систем домена "Здравоохранение")
 
+^title "Дополнительно"
 :scope:requirements /
-
-Дополнительно
 
 * требования к безопасности
 * примеры реализации
 * инструменты реализации (утилиты, библиотеки и компоненты, рекомендуемые к использованию)
 * технические [соглашения](support.conventions)
 
+^title "Цели и задачи"
 :goals /
-
-Цели и задачи
 
 Целью создания FHIR Ru Core является формирование общепринятой модели данных домена Здравоохранения на территории Российской Федерации.
 Создание FHIR Ru Core должно будет обеспечить:
@@ -110,9 +109,8 @@ FHIR-артефакты
 ..* Снижение привязки к конкретному вендору решений за счет совместимости и взаимозаменяемости на интеграционном уровне не только подсистем и компонент, но и микросервисов
 ..* Возможность построения маркетплейса цифровых решений в сфере Здравоохранения
 
+^title "Ресурсы"
 :links /
-
-Ресурсы
 
 Информационными ресурсами рабочей группы HL7 FHIR Russia являются:
 
@@ -122,9 +120,8 @@ FHIR-артефакты
 * [дискуссионная площадка](https://github.com/fhir-ru/core/discussions)
 * [телеграм чат](https://t.me/fhir_ru)
 
+^title "Принципы"
 :principles /
-
-Принципы
 
 Рабочая группа HL7 FHIR Russia формируется и работает на основе следующих принципов:
 
@@ -141,9 +138,8 @@ FHIR-артефакты
 * Технологичность
 ..* Стандарт FHIR и его Российская локализация - FHIR Ru Core изначально формируются как в машиночитаемом, так и в ориентированном на человека форматах. Из этого следует необходимость применения технологической инфраструктуры работы над стандартом, в основе которой лежит использование системы контроля версий (git), машиночитаемых форматов описания стандарта (json, xml, yaml) и инструментов генерации человекочитаемых представлений (igpop, zen lang)
 
+^title "Участие"
 :participate /
-
-Участие
 
 Участие в работе над Руководством можно принять в различных формах:
 
