upd structure, prepare example ig

--- a/docs/readme.zd
+++ b/docs/readme.zd
@@ -54,30 +54,18 @@
 
 FHIR Ru Core включает, но не ограничивается следующими разделами:
 
-^title "FHIR-артефакты"
+^title "FHIR артефакты"
 :scope:artifacts /
 
-На странице #artifacts приведены списки всех профилей на ресурсы, типы данных, расширения, наборы значений, системы кодирования и идентификаторы, определенные в рамках данного руководства по внедрению.
+На странице #core приведены списки всех профилей на ресурсы, типы данных, расширения, наборы значений, системы кодирования и идентификаторы, определенные в рамках данного руководства по внедрению.
 
 ^title "Модель данных"
 :scope:data-model /
 
-* профили FHIR ресурсов #artifacts.profiles
-* профили типов данных #artifacts.datatypes
-* расширения FHIR ресурсов #artifacts.extensions
-* терминология: справочники #artifacts.valuesets, системы кодирования #artifacts.codesystems, системы идентификации #artifacts.identifiers
-
-^title "Термины"
-:scope:terms
-
-^table [:xt/id]
-:scope:terms-table datalog/
-{:find [(pull ?e [:xt/id])] :where [[?e :parent terms]] :in [terms]}
-
-^title "История изменений"
-:scope:timeline /
-
-[История изменений](timeline) Руководства в формате git.
+* профили FHIR ресурсов #core.resource-profiles
+* профили типов данных #core.data-types
+* расширения FHIR ресурсов #core.extensions
+* терминология: справочники #core.value-sets, #core.code-systems
 
 ^title "Интеграционное взаимодействие"
 :scope:api /
@@ -93,7 +81,7 @@ FHIR Ru Core включает, но не ограничивается следу
 * требования к безопасности
 * примеры реализации
 * инструменты реализации (утилиты, библиотеки и компоненты, рекомендуемые к использованию)
-* технические [соглашения](support.conventions)
+* технические #support.conventions
 
 ^title "Цели и задачи"
 :goals /
@@ -137,6 +125,11 @@ FHIR Ru Core включает, но не ограничивается следу
 
 * Технологичность
 ..* Стандарт FHIR и его Российская локализация - FHIR Ru Core изначально формируются как в машиночитаемом, так и в ориентированном на человека форматах. Из этого следует необходимость применения технологической инфраструктуры работы над стандартом, в основе которой лежит использование системы контроля версий (git), машиночитаемых форматов описания стандарта (json, xml, yaml) и инструментов генерации человекочитаемых представлений (igpop, zen lang)
+
+^title "История изменений"
+:scope:timeline /
+
+#_timeline руководства в формате git.
 
 ^title "Участие"
 :participate /
